# h5pydantic

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  NEWS.rst  README.md  pyproject.toml
docs/: conf.py  index.rst  news.rst  quickstart.rst  reference.rst  roadmap.rst  tutorial.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/eresearch23/: presentation.org
docs/hug25/: beam_extended.py  calib_model.py  experiment.hdf5  h5py_calibration.py  h5py_experiment.h5dump  model.py  model_load.py  presentation.org  use_model.py
docs/pyconau23/: .gitignore  presentation.org  pyproject.toml
docs/src/: dump.py  experiment.txt  h5dump.sh  load.py  model.py
src/h5pydantic/: __init__.py  enum.py  exceptions.py  model.py  types.py
src/h5pydantic/newsfragments/: 1.bugfix
src/hdf5popo/: __init__.py
tests/: conftest.py  notest_roundtrip.py  test_api.py  test_assignment.py  test_dataset.py  test_enum.py  test_h5pydantic.py  test_hdf5popo.py  test_optional.py  test_partial_dumping.py  test_pydantic.py  test_roundtrip.py  test_roundtrip.txt  test_types.py
