[tool.poetry]
name = "hdf5popo"
version = "0.1.0"
description = "Maps between Plain old Python Objects and hdf5"
authors = ["Clinton Roy <clintonr@ansto.gov.au>"]
license = "PSF"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
